//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "controlplane/v1/response_messages.proto";
import "errors/errors.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service CASBackendService {
  rpc List(CASBackendServiceListRequest) returns (CASBackendServiceListResponse);
  rpc Create(CASBackendServiceCreateRequest) returns (CASBackendServiceCreateResponse);
  rpc Update(CASBackendServiceUpdateRequest) returns (CASBackendServiceUpdateResponse);
  rpc Delete(CASBackendServiceDeleteRequest) returns (CASBackendServiceDeleteResponse);
}

message CASBackendServiceListRequest {}

message CASBackendServiceListResponse {
  repeated CASBackendItem result = 1;
}

message CASBackendServiceCreateRequest {
  // Location, e.g. bucket name, OCI bucket name, ...
  string location = 1 [(buf.validate.field).string.min_len = 1];
  // Type of the backend, OCI, S3, ...
  string provider = 2 [(buf.validate.field).string.min_len = 1];
  // Descriptive name
  string description = 3;
  // Set as default in your organization
  bool default = 4;
  // Arbitrary configuration for the integration
  google.protobuf.Struct credentials = 5 [(buf.validate.field).required = true];
  string name = 6 [(buf.validate.field).string.min_len = 1];
}

message CASBackendServiceCreateResponse {
  CASBackendItem result = 1;
}

// Update a CAS backend is limited to
// - description
// - set is as default
// - rotate credentials
message CASBackendServiceUpdateRequest {
  // UUID of the workflow to attach
  string id = 1 [(buf.validate.field).string.uuid = true];
  // unique name
  string name = 5;
  // Description
  string description = 2;
  // Set as default in your organization
  bool default = 3;
  // Credentials, useful for rotation
  google.protobuf.Struct credentials = 4;
}

message CASBackendServiceUpdateResponse {
  CASBackendItem result = 1;
}

message CASBackendServiceDeleteRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message CASBackendServiceDeleteResponse {}

enum CASBackendErrorReason {
  option (errors.default_code) = 500;
  CAS_BACKEND_ERROR_REASON_UNSPECIFIED = 0;
  CAS_BACKEND_ERROR_REASON_REQUIRED = 1 [(errors.code) = 403];
  // The repository does not seem to be operational
  // a previous validation has failed
  CAS_BACKEND_ERROR_REASON_INVALID = 2 [(errors.code) = 403];
}
